--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@ spring.datasource.url=jdbc:mysql://127.0.0.1:8889/db_prueba
 spring.datasource.username=root
 spring.datasource.password=root
 
-server.port = 10000
+server.port = 14000
 
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 logging.level.org.hibernate.SQL=debug
